# rs-starter

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dprint.json  justfile
.github/workflows/: ci.yml
benchmark/: Cargo.toml
benchmark/benches/: example.rs
crates/example/: Cargo.toml
crates/example/src/: lib.rs
crates/example/src/snapshots/: example__tests__it_works.snap
