[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = []
keywords = []
description = ""
license = "MIT"
repository = "https://github.com/liangmiQwQ/umc"

edition = "2024"
rust-version = "1.92.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
# Placeholder for dependencies
