[workspace]
resolver = "3"
members = ["crates/example"]

[workspace.package]
version = "0.0.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = []
keywords = []
license = "MIT"
repository = "https://github.com/liangmiQwQ/umc"
description = ""

edition = "2024"
rust-version = "1.91.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
insta = "1.45.1"
