[workspace]
resolver = "3"
members = ["benchmark", "crates/*"]

[workspace.package]
version = "0.0.0-alpha.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = []
keywords = []
license = "MIT"
repository = "https://github.com/liangmiQwQ/rs-starter"
description = ""

edition = "2024"
rust-version = "1.91.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
criterion = "0.8.2"
insta = "1.45.1"
