[package]
name = "example"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
